# i-Haklab

./: .README.md.swp  .clang-format  .gitattributes  .setup.swp  22  CMakeCache.txt  CMakeLists.txt  Documen.md  Makefile  README.md  ban.cpp  boost-haklab.cpp  build_sh.sh  cmake_install.cmake  i-haklab  i-haklab.cpp  i-haklab_0.1.cpp  lop.cpp  main-haklab.cpp  main.cpp  manifiest.json  nota.md  notas.md  outlan.apk  package-lock.json  print  r  setup  setup-lite  setup.sh  setup~
.deb/: changes  files.json  getfiles.sh  i-haklab_4.3.13_all.deb  list.txt  list_en_iH.txt  manifiest.json  merge2tp  postinst  postrm  preinst  prerm
.deb/home/: .bashrc  .nanorc  .netrc  .vimrc  .zshenv  .zshrc
.deb/i-haklab/: manifiest.json  pendiente_en_archivo_de_control.md  tmp
.doc/es-ES/: tmux_key.md
.github/: FUNDING.yml
.github/workflows/: haklab_zip.yml  i-haklab_build.yml  i-haklab_work.yml
.set/.bundle/: config
.set/etc/: Beef_Gemfile  IbyC-mountex
.set/fix-tools/: .IbyC-fixbigdecimal.swp  .fixmetasploit.swp  IbyC-fixbigdecimal  IbyC-fixer  PyMiR  RuGiR  fix-metasploit  fixbigdecimal  fixmetasploit  instAbhackerRepo  lockphish  nexphisher  nrauf  saycheese  sayhello  (+4 more)
QuickGuides/: PasTerm.txt  aircrack-ng  crunch.txt  hakku.txt  nmap.sh  shellsploit
contrib/: i-Haklab.desktop
doc/: contribuyendo.md  doc-haklab.md  font.md  funciones.md  gui-key.md  intalacion.md  nvim.md  omz.md  shell.md  teclado-externo.md  theme-xfwm4.md  vnc  zsh.md
games/: 2048  angband  brogue  curseofwar  gnugo  greed  mathomatic  moon-buggy  snakegame  solitaire  sudoku
icon/: Makefile
include/: CMakeCache.txt  CMakeLists.txt  Makefile  arguments.h  bandit.h  below_zero.cpp  below_zero.h  below_zero.hpp  below_zero_v_0.1.h  cmake_install.cmake  command_executor.h  command_executor.hpp  command_line_argument_parser.h  fileScan.h  optparse.h  php_server.h  syntax.h  syntax.hpp
lib/: below_zero.cpp  filesmanipulation.cpp  i-haklab_cpp.h  rainbow.h
main/: main-haklab.cpp
man/: i-haklab.1
my/: README.txt
src/: AdminHaklab.cpp  CMakeLists.txt  ExecHaklab.cpp  NetworHaklab.cpp  RedTeamHaklab.cpp  application.h  below_zero.cpp  below_zero.h  below_zero_v_0.1.cpp  boost-haklab.cpp  command_executor.cpp  command_line_argument_parser.cpp  command_line_argument_parser.h  files_haklab.h  syntax.cpp
test/: CMakeLists.txt  no_arguments_test.cpp
tools/: build.sh  format.sh  license_headers.cpp  notas.md  setup.sh
(+1558 files in other folders)
